# computational_ds

./: .gitignore  README.md  cnn_scraper.py  fox_scrapper.py  headlines_vis_v2.py  main.py  pyproject.toml  requirements.txt  reuters_scraper.py  topic_search.py
data/: filepaths.py
data/source/: cnn_2014.csv  cnn_2015.csv  cnn_2016.csv  cnn_2017.csv  cnn_2018.csv  cnn_weekly_ref_data.csv
old/: headlines_vis.py  headlines_vis_v2.py  topic_search_2d.py  topic_search_v2.py
semantic_analysis/: results.ipynb  semantic_analysis.py
src/: data_preperation.py  data_quality_check_and_vis.py
src/app/: app.py  app_stream.ipynb  run.py
src/app/templates/: best_lda_visualization.html  best_lda_visualization_3.html  lda_visualization.html
src/data_processing/: article_date_creater.py  data_preperation.py  data_quality_check_and_vis.py  helper.py
src/graph_visualisation/: vis.py  vis_specific.py
src/recommendor/: recommended_articles.csv  tfidf_recommendor.py  tfidf_recommendor_new.py
src/scraper/: scraper_cnn.py  scraper_fox.py  scraper_reuters.py  scraper_selection.py
src/semantic_analysis/: merging.ipynb  results.ipynb  semantic_analysis.py  semantic_analysis_evaluation-DESKTOP-8RROJ6E.py  semantic_analysis_evaluation.py  vis_sentiment.py
src/topic_modeling/: LDA.ipynb  LDA.py  centroid_distance_matrix.csv  preprocess_text.py  topic_clustering_tfidf_hdbscan.py  topic_clustering_tfidf_knn.py  topic_clustering_word2vec_hdbscan.py  topic_clustering_word2vec_knn.py
test_files/: sortfix.py  unique_df1.csv  unique_links_from_cnn_2017.csv
(+9 files in other folders)
