[tool.poetry]
name = "computational-ds"
version = "0.1.0"
description = ""
authors = ["Timm Rohweder <s232529@dtu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
gensim = "^4.3.2"
pyldavis = "^3.4.1"
networkx = "^3.2.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
transformers = "^4.35.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

